[package]
name = "gpio-remote"
version = "0.1.0"
edition = "2021"

[features]
default = ["send", "receive", "native", "protocol", "logging"]
native = []
protocol = ["serde", "rmp"]
send = ["protocol"]
receive = ["protocol"]
logging = ["log"]

[dependencies]
gpio = "0.4.1"
log = { version = "0.4.18", optional = true }
rmp = { version = "0.8.11", optional = true }
rmp-serde = "1.1.1"
serde = { version = "1.0.163", features = ["derive"], optional = true }
thiserror = "1.0.40"
